# amplifier-usage-insights

./: .gitignore  README.md  build-v0.5-validation.yaml  pyproject.toml
bundles/usage-insights/: bundle.yaml  tools.yaml
bundles/usage-insights/contexts/: instructions.md
docs/: README.md
docs/01-vision/: PRINCIPLES.md  README.md  SUCCESS-METRICS.md  VISION.md
docs/02-requirements/epics/: 01-personal-insights.md  02-team-insights.md  03-manager-insights.md  README.md
docs/02-requirements/user-stories/: README.md
docs/03-technical-architecture/: V0.5-DESIGN.md  V1-ARCHITECTURE.md
src/amplifier_usage_insights/: __init__.py  cli.py  insights.py  metrics.py  parser.py  schema.sql  storage.py  tips.py  tool.py
tests/: test_integration.py  test_metrics.py  test_parser.py  test_storage.py  test_tips.py
